# quant

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
source/quant/framed_geometry/: Adjoint.cpp  Adjoint.h  BaseChange.h  CMakeLists.txt  Difference.h  FrameID.h  FrameMismatch.h  FrameMixin.h  Framed.h  FramedDifference.h  FramedMixin.h  FramedState.h  Hat.cpp  Hat.h  State.h  common.h  forward_declarations.h
source/quant/framed_units/: CMakeLists.txt  acceleration.h  force.h  position.h  position_fwd.h  time.h  velocity.h
source/quant/framed_units/acceleration/: AngularAcceleration.cpp  AngularAcceleration.h  AngularAccelerationDifference.cpp  AngularAccelerationDifference.h  LinearAcceleration.cpp  LinearAcceleration.h  LinearAccelerationDifference.cpp  LinearAccelerationDifference.h  SpatialAcceleration.cpp  SpatialAcceleration.h  SpatialAccelerationDifference.cpp  SpatialAccelerationDifference.h  forward_declarations.h
source/quant/framed_units/force/: Force.cpp  Force.h  ForceDifference.cpp  ForceDifference.h  Torque.cpp  Torque.h  TorqueDifference.cpp  TorqueDifference.h  Wrench.cpp  Wrench.h  WrenchDifference.cpp  WrenchDifference.h  forward_declarations.h
source/quant/framed_units/framed_length/: FrameTransform.cpp  FrameTransform.h  FramedPosition.h
source/quant/framed_units/position/: AngularDisplacement.cpp  AngularDisplacement.h  FramedAngularDisplacement.h  FramedLinearDisplacement.h  FramedOrientation.h  FramedPose.h  FramedPosition.cpp  FramedPosition.h  FramedSpatialDisplacement.h  LinearDisplacement.cpp  LinearDisplacement.h  Orientation.cpp  Orientation.h  Pose.cpp  Pose.h  Position.cpp  Position.h  SpatialDisplacement.cpp  SpatialDisplacement.h  forward_declarations.h
source/quant/framed_units/time/: DateTime.cpp  DateTime.h  Duration.h  Frequency.cpp  Frequency.h  TimePoint.h  forward_declarations.h
source/quant/framed_units/velocity/: AngularVelocity.cpp  AngularVelocity.h  AngularVelocityDifference.cpp  AngularVelocityDifference.h  LinearVelocity.cpp  LinearVelocity.h  LinearVelocityDifference.cpp  LinearVelocityDifference.h  Twist.cpp  Twist.h  TwistDifference.cpp  TwistDifference.h  forward_declarations.h
source/quant/geometry/: AngularDifference.h  AngularIsometricState.cpp  AngularIsometricState.h  AngularState.cpp  AngularState.h  AxisAngle.cpp  AxisAngle.h  CMakeLists.txt  Circa.cpp  Circa.h  Difference.cpp  Difference.h  Difference.h.autosave  DomainDefinition.h  IsometryQuantity.h  LinearDifference.h  LinearState.cpp  LinearState.h  QuaternionQuantity.h  SE3State.cpp  SE3State.h  SE3TangentState.cpp  SE3TangentState.h  SO3State.cpp  SO3State.h  SO3TangentState.cpp  SO3TangentState.h  Scalar.h  ScalarDifference.h  ScalarQuantity.h  ScalarState.cpp  ScalarState.h  Spatial.h  SpatialDifference.h  SpatialIsometricState.cpp  SpatialIsometricState.h  SpatialState.cpp  SpatialState.h  T3State.cpp  T3State.h  (+11 more)
source/quant/geometry/detail/: Accessors.h  ArithmeticOperators.h  DifferenceAccessor.cpp  DifferenceAccessor.h  ManifoldOperators.h  QuantityAccessor.cpp  QuantityAccessor.h
source/quant/units/: AxisAngle.h  CMakeLists.txt  Scalar.h  Vector.h  acceleration.h  acceleration_constants.h  acceleration_fwd.h  angle.h  distance.h  distance_fwd.h  electric_current.h  force.h  force_constants.h  force_fwd.h  forward_declarations.h  jerk.h  jerk_constants.h  jerk_fwd.h  length.h  mass.h  mass_constants.h  mass_fwd.h  momentum.h  momentum_fwd.h  position.h  position_constants.h  position_fwd.h  position_minimal.h  speed.h  speed_constants.h  speed_fwd.h  temperature.h  temperature_constants.h  temperature_fwd.h  time.h  time_constants.h  time_fwd.h  time_minimal.h  velocity.h  velocity_constants.h  (+1 more)
source/quant/units/acceleration/: AngularAcceleration.cpp  AngularAcceleration.h  AngularAccelerationDifference.cpp  AngularAccelerationDifference.h  LinearAcceleration.cpp  LinearAcceleration.h  LinearAccelerationDifference.cpp  LinearAccelerationDifference.h  SpatialAcceleration.cpp  SpatialAcceleration.h  SpatialAccelerationDifference.cpp  SpatialAccelerationDifference.h  constants.h  forward_declarations.h
source/quant/units/angle/: Angle.h  AngleDifference.h  AngularDifference.h  constants.h  forward_declarations.h
source/quant/units/angular_speed/: AngularSpeed.h  constants.h  forward_declarations.h
source/quant/units/distance/: Distance.h  constants.h
source/quant/units/electric_current/: Current.h  constants.h  forward_declarations.h
source/quant/units/force/: Force.cpp  Force.h  ForceDifference.cpp  ForceDifference.h  Torque.cpp  Torque.h  TorqueDifference.cpp  TorqueDifference.h  Wrench.cpp  Wrench.h  WrenchDifference.cpp  WrenchDifference.h  constants.h  forward_declarations.h
source/quant/units/jerk/: AngularJerk.cpp  AngularJerk.h  LinearJerk.cpp  LinearJerk.h  constants.h  forward_declarations.h
source/quant/units/length/: Distance.h  constants.h  forward_declarations.h
source/quant/units/mass/: Mass.h  (+2 more)
source/quantpy/: CMakeLists.txt  quantpy.cpp
source/quantpy/geometry/: angle_axis.cpp  angle_axis.h  angular_state.h  difference.h  linear_state.h  scalar.cpp  scalar.h  scalar_state.h  state.h
source/quantpy/units/: acceleration.cpp  acceleration.h  angle.cpp  angle.h  axis_angle.cpp  axis_angle.h  scalar.cpp  scalar.h  vector.cpp  vector.h
tests/: CMakeLists.txt  main.cpp
tests/framed_geometry/: CMakeLists.txt  DummyLinearState.h  framed_geometry_tests.h  main.cpp
tests/framed_units/: CMakeLists.txt  coordinate_system.py  framed_acceleration_tests.h  framed_force_tests.h  framed_position_tests.h  framed_units_tests.h  framed_velocity_tests.h  main.cpp
tests/geometry/: CMakeLists.txt  geometry_tests.h  main.cpp
tests/quant/framed_geometry/: framed_geometry_tests.h
tests/quant/geometry/: geometry_tests.h
tests/quant/units/: CMakeLists.txt  units_tests.h
tests/quantpy/: test_geometry_scalar_state.py  test_units_angle.py  test_units_axis_angle.py  test_units_scalar.py  test_units_vector.py
tests/units/: CMakeLists.txt  main.cpp  units_tests.h
(+94 files in other folders)
